# Common613

./: .gitignore  CMakeLists.txt
cmake/: FindCommon613.cmake  Finddbgeng.cmake  Findfmt.cmake  PrepareCommon613.cmake
include/common613/: arith_utils.h  assert.h  checked_cast.h  file_utils.h  memory.h  struct_size_check.h  vector_arith_utils.h  vector_definitions.h
include/common613/compat/: cpp17.h  file_system.h
test/: CMakeLists.txt  arith_utils_test.cpp  assert_test.cpp  file_utils_test.cpp  vector_arith_utils_test.cpp  vector_definitions_test.cpp
